--- a/MFC_BlackoutTool/MFC_BlackoutTool.vcxproj
+++ b/MFC_BlackoutTool/MFC_BlackoutTool.vcxproj
@@ -192,7 +192,9 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="CBtnFormView.h" />
     <ClInclude Include="CDraw.h" />
+    <ClInclude Include="CFixedSplitterWnd.h" />
     <ClInclude Include="DicomImg.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="JsonFile.h" />
@@ -205,7 +207,9 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CBtnFormView.cpp" />
     <ClCompile Include="CDraw.cpp" />
+    <ClCompile Include="CFixedSplitterWnd.cpp" />
     <ClCompile Include="DicomImg.cpp" />
     <ClCompile Include="JsonFile.cpp" />
     <ClCompile Include="MainFrm.cpp" />
