--- a/MFC_BlackoutTool/MFC_BlackoutTool.vcxproj.filters
+++ b/MFC_BlackoutTool/MFC_BlackoutTool.vcxproj.filters
@@ -48,6 +48,12 @@
     <ClInclude Include="JsonFile.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="CBtnFormView.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="CFixedSplitterWnd.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MFC_BlackoutTool.cpp">
@@ -72,6 +78,12 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="JsonFile.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="CBtnFormView.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="CFixedSplitterWnd.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
