--- a/MFC_BlackoutTool/MFC_BlackoutTool.vcxproj.filters
+++ b/MFC_BlackoutTool/MFC_BlackoutTool.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="CFixedSplitterWnd.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="CPresetFormView.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MFC_BlackoutTool.cpp">
@@ -84,6 +87,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="CFixedSplitterWnd.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="CPresetFormView.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
