--- a/MFC_BlackoutTool/MFC_BlackoutTool.vcxproj
+++ b/MFC_BlackoutTool/MFC_BlackoutTool.vcxproj
@@ -178,7 +178,8 @@
       <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>opencv_world460.lib</AdditionalDependencies>
+      <AdditionalDependencies>C:\opencv\build\x64\vc15\lib\opencv_world460.lib</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Users\user\Desktop\JSON\lib\Release;C:\DCMTK\DCMTK_bulid\lib\Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <Midl>
       <MkTypLibCompatible>false</MkTypLibCompatible>
@@ -195,6 +196,7 @@
     <ClInclude Include="CBtnFormView.h" />
     <ClInclude Include="CDraw.h" />
     <ClInclude Include="CFixedSplitterWnd.h" />
+    <ClInclude Include="CListFormView.h" />
     <ClInclude Include="CPresetFormView.h" />
     <ClInclude Include="DicomImg.h" />
     <ClInclude Include="framework.h" />
@@ -211,6 +213,7 @@
     <ClCompile Include="CBtnFormView.cpp" />
     <ClCompile Include="CDraw.cpp" />
     <ClCompile Include="CFixedSplitterWnd.cpp" />
+    <ClCompile Include="CListFormView.cpp" />
     <ClCompile Include="CPresetFormView.cpp" />
     <ClCompile Include="DicomImg.cpp" />
     <ClCompile Include="JsonFile.cpp" />
