--- a/MFC_BlackoutTool/MFC_BlackoutTool.vcxproj.filters
+++ b/MFC_BlackoutTool/MFC_BlackoutTool.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="CPresetFormView.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="CListFormView.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MFC_BlackoutTool.cpp">
@@ -90,6 +93,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="CPresetFormView.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="CListFormView.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
